# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\V1\Admin\AdminLoginController;
 use App\Http\Controllers\Api\V1\User\UserLoginController;
 use App\Http\Controllers\Api\V1\User\UserLogoutController;
 use App\Http\Controllers\Api\V1\User\UserRegistrationController;
@@ -23,4 +24,8 @@ Route::group(['prefix' => '/v1/user'], function () {
     Route::group(['middleware' => ['auth.jwt', 'user']], function () {
         Route::middleware('auth.jwt')->get('/logout', UserLogoutController::class)->name('user.logout');
     });
+});
+
+Route::group(['prefix' => '/v1/admin'], function () {
+    Route::post('/login', AdminLoginController::class)->name('admin.login');
 });
